# django-rest-framework

./: .env  .gitignore  README.md  pyproject.toml
shoeinfo/: apps.py  models.py  serializers.py  views.py
shoeinfo/management/commands/: bootstrap_data.py
shoeinfo/migrations/: 0001_initial.py  0002_auto_20200617_2025.py
shoestore/: settings.py  urls.py
shoestore/shoeinfo/: admin.py  serializers.py
shoestore/shoeinfo/management/commands/: populate.py
